--- a/pokedex3/Base.lproj/Main.storyboard
+++ b/pokedex3/Base.lproj/Main.storyboard
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="pokemon.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pokedex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +25,126 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7v0-vZ-8xc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sur-Fe-qul">
+                                        <rect key="frame" x="109" y="28" width="157" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="157" id="DOE-Wk-g7z"/>
+                                            <constraint firstAttribute="height" constant="40" id="RU4-HQ-Yee"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="22"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1LT-kh-BuS">
+                                        <rect key="frame" x="328" y="32" width="33" height="33"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="music"/>
+                                        <connections>
+                                            <action selector="musicBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1eD-1h-8bn"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sur-Fe-qul" secondAttribute="bottom" constant="8" id="7VP-gE-qDV"/>
+                                    <constraint firstItem="sur-Fe-qul" firstAttribute="centerX" secondItem="7v0-vZ-8xc" secondAttribute="centerX" id="dCP-xp-8gE"/>
+                                    <constraint firstAttribute="height" constant="76" id="rp5-oX-WLH"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="xPm-zj-ZHT">
+                                <rect key="frame" x="0.0" y="76" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="3KK-76-cVy"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="7Oq-3D-kKj">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ts1-fc-OSf">
+                                <rect key="frame" x="20" y="140" width="335" height="507"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qFc-Wo-Ccp">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="ojO-SD-oWY" customClass="PokeCell" customModule="pokedex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="s9L-ht-Np1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="Wor-bk-iF7"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VYG-Nk-F88">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="VYG-Nk-F88" firstAttribute="top" secondItem="s9L-ht-Np1" secondAttribute="bottom" id="E6q-1T-3G4"/>
+                                            <constraint firstItem="s9L-ht-Np1" firstAttribute="leading" secondItem="ojO-SD-oWY" secondAttribute="leading" id="ZbW-10-XUg"/>
+                                            <constraint firstAttribute="trailing" secondItem="VYG-Nk-F88" secondAttribute="trailing" id="ca9-LM-nbk"/>
+                                            <constraint firstItem="VYG-Nk-F88" firstAttribute="leading" secondItem="ojO-SD-oWY" secondAttribute="leading" id="eQQ-D5-Xt3"/>
+                                            <constraint firstAttribute="trailing" secondItem="s9L-ht-Np1" secondAttribute="trailing" id="jCe-EQ-zIW"/>
+                                            <constraint firstAttribute="bottom" secondItem="VYG-Nk-F88" secondAttribute="bottom" id="n7d-F5-8Rk"/>
+                                            <constraint firstItem="s9L-ht-Np1" firstAttribute="top" secondItem="ojO-SD-oWY" secondAttribute="top" id="s5S-zp-8HJ"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="VYG-Nk-F88" id="fmm-Kf-3lP"/>
+                                            <outlet property="thumbImg" destination="s9L-ht-Np1" id="eRy-pR-Efa"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="7Oq-3D-kKj" secondAttribute="trailing" id="2SD-PA-Ouo"/>
+                            <constraint firstItem="xPm-zj-ZHT" firstAttribute="top" secondItem="7v0-vZ-8xc" secondAttribute="bottom" id="97z-g5-gRQ"/>
+                            <constraint firstAttribute="trailing" secondItem="7v0-vZ-8xc" secondAttribute="trailing" id="9uh-w6-bvC"/>
+                            <constraint firstItem="7v0-vZ-8xc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Bb9-YF-Lb8"/>
+                            <constraint firstItem="Ts1-fc-OSf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="BqB-4u-5P5"/>
+                            <constraint firstAttribute="trailing" secondItem="xPm-zj-ZHT" secondAttribute="trailing" id="CfO-EV-gKl"/>
+                            <constraint firstItem="7Oq-3D-kKj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dmd-KJ-FiB"/>
+                            <constraint firstItem="Ts1-fc-OSf" firstAttribute="top" secondItem="xPm-zj-ZHT" secondAttribute="bottom" constant="20" id="Nhz-Tt-Sca"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ts1-fc-OSf" secondAttribute="bottom" constant="20" id="Q26-CI-JRx"/>
+                            <constraint firstAttribute="trailing" secondItem="Ts1-fc-OSf" secondAttribute="trailing" constant="20" id="Zn7-VS-wgC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7Oq-3D-kKj" secondAttribute="bottom" id="bJ7-vy-sup"/>
+                            <constraint firstItem="xPm-zj-ZHT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="icj-Db-TTY"/>
+                            <constraint firstItem="7Oq-3D-kKj" firstAttribute="top" secondItem="xPm-zj-ZHT" secondAttribute="bottom" id="nCF-s8-VBu"/>
+                            <constraint firstItem="7v0-vZ-8xc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vNq-Rd-y5p"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="Ts1-fc-OSf" id="Zez-eY-Ydp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+        <image name="music" width="100" height="100"/>
+    </resources>
 </document>
